--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     width: 100%;
     height: 100vh;
-    background-image: url(./images/arxaplan.jpg);
+    background-image: url(./arxaplan.jpg);
 }
 .link {
 text-decoration: none;
